[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "athena-agent"
version = "0.1.0"
description = "A lightweight, privacy-first local AI agent framework"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "夜理" }
]
keywords = ["ai", "agent", "llm", "local", "privacy", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
athena = "athena.cli:main"

[project.urls]
Homepage = "https://github.com/yeli/athena-agent"
Repository = "https://github.com/yeli/athena-agent"
Issues = "https://github.com/yeli/athena-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["athena"]

[tool.pytest.ini_options]
testpaths = ["tests"]
